Implement minor changes

--- a/assignment-5/a4-01-04.ipynb
+++ b/assignment-5/a4-01-04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
        "   {'name': 'Sugar', 'amount': 20.31, 'unit_name': 'G'}]}]"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,16 +1148,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 332,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['QUAKER, OAT BRAN, HOT CEREAL',\n",
+       " 'QUAKER, OLD FASHIONED OATS',\n",
+       " 'QUAKER, INSTANT OATMEAL, BANANA NUT',\n",
+       " 'Quaker Oat Bran Hot Cereal 16 Ounce Box',\n",
+       " 'Quaker Corn Crunch Toasted Corn & Oat Cereal 15 Ounce Paper Box']"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "op = [d['description'] for d in food_data.find.get_by_description(\"Quaker*Oat\")]"
+    "[d['description'] for d in food_data.find.get_by_description(\"Quaker*Oat\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -1174,19 +1189,18 @@
        " ('Sugar', -2.48, 'G')]"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# import food_data.compare\n",
     "food_data.compare.diff_nutrition(345534, 604974)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1217,7 @@
        "  'Spices'})"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
