Implement minor code changes

--- a/assignment-5/a4-01-04.ipynb
+++ b/assignment-5/a4-01-04.ipynb
@@ -1360,6 +1360,27 @@
    "source": [
     "%run -m food_data.compare -n 345534 346058 -s"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/workspace/CSCI_Assignments/a5.zip'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import shutil\n",
+    "shutil.make_archive('../a5', 'zip', '..', 'assignment-5')"
+   ]
   }
  ],
  "metadata": {
