--- a/assignment-5/a4-01-04.ipynb
+++ b/assignment-5/a4-01-04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
        "   {'name': 'Sugar', 'amount': 20.31, 'unit_name': 'G'}]}]"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
        " 'Quaker Corn Crunch Toasted Corn & Oat Cereal 15 Ounce Paper Box']"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        " ('Sugar', -2.48, 'G')]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
        "  'Spices'})"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1245,6 +1245,14 @@
       "Calories: -12.0 kcal\n",
       "Sugar: -2.48 g\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/runpy.py:127: RuntimeWarning: 'food_data.compare' found in sys.modules after import of package 'food_data', but prior to execution of 'food_data.compare'; this may result in unpredictable behaviour\n",
+      "  warn(RuntimeWarning(msg))\n"
+     ]
     }
    ],
    "source": [
@@ -1253,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1266,6 +1274,14 @@
       "767774 QTG Quaker Oat Bran Hot Cereal 16 Ounce Box\n",
       "768340 QTG Quaker Corn Crunch Toasted Corn & Oat Cereal 15 Ounce Paper Box\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/runpy.py:127: RuntimeWarning: 'food_data.find' found in sys.modules after import of package 'food_data', but prior to execution of 'food_data.find'; this may result in unpredictable behaviour\n",
+      "  warn(RuntimeWarning(msg))\n"
+     ]
     }
    ],
    "source": [
@@ -1274,25 +1290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Citric Acid\n",
-      "  Tomato Juice\n",
-      "  Tomatoes\n",
       "  Calcium Chloride\n",
+      "  Citric Acid\n",
+      "  Tomatoes\n",
+      "  Tomato Juice\n",
       "- Less Than 2% of: Salt\n",
-      "+ Salt\n",
-      "+ Spices\n",
-      "+ Olive Oil\n",
+      "+ Dried Garlic\n",
       "+ Soybean Oil\n",
       "+ Dried Onion\n",
-      "+ Dried Garlic\n",
-      "+ Natural Flavor\n"
+      "+ Natural Flavor\n",
+      "+ Olive Oil\n",
+      "+ Spices\n",
+      "+ Salt\n"
      ]
     }
    ],
@@ -1302,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1388,7 @@
        "'/workspace/CSCI_Assignments/a5.zip'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
