Make changes in 1b

--- a/assignment-7/a7.ipynb
+++ b/assignment-7/a7.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
     "decades_urls = ['http://faculty.cs.niu.edu/~dakoop/cs503-2022sp/a7/unemp-' +\n",
     "                str(i) + '.zip' for i in range(1970, 2021, 10)]\n",
     "\n",
-    "def download_files_and_extract(url, response):\n",
+    "def download_files_and_extract(url, data):\n",
     "    file_name = url.split('/')[-1]\n",
     "    current_dir_path = os.getcwd() + '/'\n",
     "    zip_file_path = current_dir_path + file_name\n",
     "\n",
     "    if not os.path.exists(zip_file_path):\n",
     "        with open(zip_file_path, 'wb') as f:\n",
-    "            f.write(response.content)\n",
+    "            f.write(data)\n",
     "\n",
     "    unzip_file_name = file_name.split('.')[0]\n",
     "    unzip_file_path = current_dir_path + unzip_file_name\n",
@@ -53,12 +53,12 @@
     "\n",
     "for url in decades_urls:\n",
     "    response = requests.get(url)\n",
-    "    download_files_and_extract(url, response)"
+    "    download_files_and_extract(url, response.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +70,17 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "async def extract_files_async(session, url):\n",
+    "decades_urls = ['http://faculty.cs.niu.edu/~dakoop/cs503-2022sp/a7/unemp-' +\n",
+    "                str(i) + '.zip' for i in range(1970, 2021, 10)]\n",
+    "\n",
+    "def download_files_and_extract(url, data):\n",
     "    file_name = url.split('/')[-1]\n",
     "    current_dir_path = os.getcwd() + '/'\n",
     "    zip_file_path = current_dir_path + file_name\n",
     "\n",
     "    if not os.path.exists(zip_file_path):\n",
-    "        async with aiofiles.open(zip_file_path, mode='w') as f:\n",
-    "            await f.write()\n",
+    "        with open(zip_file_path, 'wb') as f:\n",
+    "            f.write(data)\n",
     "\n",
     "    unzip_file_name = file_name.split('.')[0]\n",
     "    unzip_file_path = current_dir_path + unzip_file_name\n",
@@ -90,12 +93,12 @@
     "\n",
     "async def dowload_file_async(session, url):\n",
     "    async with session.get(url) as response:\n",
-    "        await extract_files_async(url, response)\n",
-    "        \n",
-    "async def download_all_files_async(decades_urls):\n",
+    "        download_files_and_extract(url, await response.read())\n",
+    "\n",
+    "async def download_all_files_async(urls):\n",
     "    async with aiohttp.ClientSession() as session:\n",
     "        tasks = []\n",
-    "        for url in decades_urls:\n",
+    "        for url in urls:\n",
     "            task = asyncio.ensure_future(dowload_file_async(session, url))\n",
     "            tasks.append(task)\n",
     "        await asyncio.gather(*tasks, return_exceptions=True)\n",
@@ -105,15 +108,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/workspace/CSCI_Assignments/assignment-7/unemp-1970/unemp.csv', '/workspace/CSCI_Assignments/assignment-7/unemp-1980/unemp.csv', '/workspace/CSCI_Assignments/assignment-7/unemp-1990/employment.csv', '/workspace/CSCI_Assignments/assignment-7/unemp-2000/unemployment.csv', '/workspace/CSCI_Assignments/assignment-7/unemp-2010/employment.csv', '/workspace/CSCI_Assignments/assignment-7/unemp-2020/unemp.csv']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['/workspace/CSCI_Assignments/assignment-7/unemp-1970/unemp.csv',\n",
+       " '/workspace/CSCI_Assignments/assignment-7/unemp-1980/unemp.csv',\n",
+       " '/workspace/CSCI_Assignments/assignment-7/unemp-1990/employment.csv',\n",
+       " '/workspace/CSCI_Assignments/assignment-7/unemp-2000/unemployment.csv',\n",
+       " '/workspace/CSCI_Assignments/assignment-7/unemp-2010/employment.csv',\n",
+       " '/workspace/CSCI_Assignments/assignment-7/unemp-2020/unemp.csv']"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -121,12 +132,12 @@
     "import glob\n",
     "\n",
     "matched_files = [os.getcwd() + '/' + i for i in glob.glob(\"**/*.csv\", recursive = True)]\n",
-    "print(matched_files)"
+    "matched_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
